--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <!-- OVERVIEW -->
   <h2>Overview</h2>
   <p>
-    Raddragonpidgey, commonly known as Rad, is a member of the Dragonal race — humans capable
+    Raddragonpidgey, commonly known as Rad, is a member of the Dragonal race, humans capable
     of shapeshifting into dragon-based hybrid forms. Rad’s transformation results in a
     wingless half-dragon, half-griffin body supported by advanced gravity manipulation.
   </p>
@@ -308,3 +308,4 @@ set("rad");
 
 </body>
 </html>
+
