--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 const DATA = {
   gravity:74,
   rad:{
-    title:"Rad — Human Form",
+    title:"Rad - Human Form",
     image:"rad.png",
     description:
       "Rad’s human form is relaxed and unbothered. He does not attempt to blend in and carries himself quietly, conserving energy unless something truly matters.",
@@ -234,7 +234,7 @@ const DATA = {
       "Rad avoids unnecessary interaction with strangers and is fully himself around friends. Lazy by nature, he can become sharply energetic when needed. He fears losing people far more than losing control and genuinely enjoys being part of Mytharxsis."
   },
   dragon:{
-    title:"Raddragonpidgey — Dragonal Form",
+    title:"Raddragonpidgey - Dragonal Form",
     image:"raddragonpidgey.png",
     description:
       "This form is heavier, louder, and more intimidating. Despite lacking wings, Rad moves through gravity manipulation, falling in any direction.",
@@ -308,4 +308,5 @@ set("rad");
 
 </body>
 </html>
+
 
